--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <br>
+    <p>I regret to inform there will be no lasagna recipe here.</p>
 </body>
 </html>
